--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
     }
-    .link {
+    .link img {
         position: absolute;
+        width: 100px;
+        height:auto;
         bottom: 20px;
         left: 20px;
     }
@@ -28,8 +30,7 @@
 </head>
 <body>
     <img class="hatterkep" src="kepek\loading_screen_done.jpg" usemap="#elsooldal">
-    <div class="link">
-    <a href="https://www.stardewvalley.net/" target="_blank">A játék oldala</a></div>
+    <a href="https://www.stardewvalley.net/" target="_blank" class="link"><img src="kepek\csirke.png"></a>
     <map name="elsooldal">
         <area shape="rect" coords="689,770,470,935" href="szereplok.html">
         <area shape="rect" coords="720,770,940,935" href="jatekmenet.html">
