--- a/szereplok.html
+++ b/szereplok.html
@@ -21,17 +21,38 @@
         h3 {
             font-size: 30px;
             margin-left: 15px;
+            text-align: center;
         }
         .emberek {
             width: 200px;
             height: 200px;
+            margin-left: 15px;
+        }
+        td {
+            text-align: center;
+            margin-top: 0%;
+        }
+        .nevek {
+            font-weight: bold;
+        }
+        table {
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .fooldalra img {
+            position: absolute;
+            width: 150px;
+            height:auto;
+            top: 10px;
+            right: 10px;
         }
     </style>
 </head>
 <body>
-    <h1>Szereplők</h1>
+    <h1>Szereplők     <a href="index.html" class="fooldalra"><img src="kepek\kekcsirke.png" title="Vissza a főoldalra"></a></h1>
     <p>
-        A szereplők Pelikán város és környékének a lakói. Mindegyik szereplőnek megvan a napi rutinja, szóval időjárástól és játék szerinti időtől függően megtalálhatóak a városban.<br>
+        
+        <a href="https://www.stardewvalleywiki.com/Villagers" target="_blank">A szereplők</a> Pelikán város és környékének a lakói. Mindegyik karakternek megvan a napi rutinja, szóval időjárástól és játék szerinti időtől függően megtalálhatóak a városban.<br>
         A szereplők megbízhatnak küldetésekkel amit ha teljesítünk növeli a barátságot. Mindegyik falusinak megvannak a szeretett és utált ajándékai amire különbözően reagálnak.
     </p>
     <h2>Házasodható karakterek</h2>
@@ -39,11 +60,140 @@
         <table>
             <tr>
                 <td><img src="kepek\Alex.png" class="emberek"></td>
+                <td><img src="kepek\Elliott.png" class="emberek"></td>
+                <td><img src="kepek\Harvey.png" class="emberek"></td>
+                <td><img src="kepek\Sam.png" class="emberek"></td>
+                <td><img src="kepek\Sebastian.png" class="emberek"></td>
+                <td><img src="kepek\Shane.png" class="emberek"></td>
             </tr>
-            <tr>
-                <td></td>
+            <tr class="nevek">
+                <td>Alex</td>
+                <td>Elliott</td>
+                <td>Harvey</td>
+                <td>Sam</td>
+                <td>Sebastian</td>
+                <td>Shane</td>
             </tr>
         </table>
-        <a href="index.html">fooldal</a>
+            <h3>Nők</h3>
+        <table>
+            <tr>
+                <td><img src="kepek\Abigail.png" class="emberek"></td>
+                <td><img src="kepek\Emily.png" class="emberek"></td>
+                <td><img src="kepek\Haley.png" class="emberek"></td>
+                <td><img src="kepek\Leah.png" class="emberek"></td>
+                <td><img src="kepek\Maru.png" class="emberek"></td>
+                <td><img src="kepek\Penny.png" class="emberek"></td>
+            </tr>
+            <tr class="nevek">
+                <td>Abigail</td>
+                <td>Emily</td>
+                <td>Haley</td>
+                <td>Leah</td>
+                <td>Maru</td>
+                <td>Penny</td>
+            </tr>
+        </table>
+        <h2>Nem házasodható karakterek</h2>
+        <table>
+            <tr>
+                <td><img src="nonmarriagable\Caroline.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Clint.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Demetrius.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Dwarf.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Evelyn.png" class="emberek"></td>
+                <td><img src="nonmarriagable\George.png" class="emberek"></td>
+            </tr>
+            <tr class="nevek">
+                <td>Caroline</td>
+                <td>Clint</td>
+                <td>Demetrius</td>
+                <td>Dwarf</td>
+                <td>Evelyn</td>
+                <td>George</td>
+            </tr>
+            <tr class="emberek">
+                <td><img src="nonmarriagable\Gus.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Jas.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Jodi.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Kent.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Krobus.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Leo.png" class="emberek"></td>
+            </tr>
+            <tr class="nevek">
+                <td>Gus</td>
+                <td>Jas</td>
+                <td>Jodi</td>
+                <td>Kent</td>
+                <td>Krobus</td>
+                <td>Leo</td>
+            </tr>
+            <tr class="emberek">
+                <td><img src="nonmarriagable\Lewis.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Linus.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Marnie.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Pam.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Pierre.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Robin.png" class="emberek"></td>
+            </tr>
+            <tr class="nevek">
+                <td>Lewis</td>
+                <td>Linus</td>
+                <td>Marnie</td>
+                <td>Pam</td>
+                <td>Pierre</td>
+                <td>Robin</td>
+            </tr>
+            <tr class="emberek">
+                <td></td>
+                <td><img src="nonmarriagable\Sandy.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Vincent.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Willy.png" class="emberek"></td>
+                <td><img src="nonmarriagable\Wizard.png" class="emberek"></td>
+                <td></td>
+            </tr>
+            <tr class="nevek">
+                <td></td>
+                <td>Sandy</td>
+                <td>Vincent</td>
+                <td>Willy</td>
+                <td>Wizard</td>
+                <td></td>
+            </tr>
+        </table> 
+        <h2>Nem ajándékozható NPC-k</h2>  
+        <table>
+            <tr class="emberek">
+                <td><img src="npc/Birdie.png" class="emberek"></td>
+                <td><img src="npc/Bouncer.png" class="emberek"></td>
+                <td><img src="npc/Fizz_00.png" class="emberek"></td>
+                <td><img src="npc/Gil.png" class="emberek"></td>
+                <td><img src="npc/Governor.png" class="emberek"></td>
+                <td><img src="npc/Grandpa.png" class="emberek"></td>
+            </tr>
+            <tr class="nevek">
+                <td>Birdie</td>
+                <td>Bouncer</td>
+                <td>Fizz</td>
+                <td>Gil</td>
+                <td>Governor</td>
+                <td>Grandpa</td>
+            </tr>
+            <tr class="emberek">
+                <td><img src="npc/Gunther.png" class="emberek"></td>
+                <td><img src="npc/Henchman_Portrait_1.png" class="emberek"></td>
+                <td><img src="npc/Marlon.png" class="emberek"></td>
+                <td><img src="npc/Morris.png" class="emberek"></td>
+                <td><img src="npc/Mr._Qi.png" class="emberek"></td>
+                <td><img src="npc/Professor_Snail.png" class="emberek"></td>
+            </tr>
+            <tr class="nevek">
+                <td>Gunther</td>
+                <td>Henchman</td>
+                <td>Marlon</td>
+                <td>Morris</td>
+                <td>Mr. Qi</td>
+                <td>Professor Snail</td>
+        </table>   
 </body>
 </html>
