--- a/jatekmenet.html
+++ b/jatekmenet.html
@@ -4,8 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            background-image: url(kepek/hatterkeppenny.jpg);
+            background-repeat: no-repeat;
+            background-position: top;
+            font-size: 30px;
+            background-attachment: fixed;
+            margin-right: 750px;
+        }
+        .szoveg {
+            margin-left: auto;
+            margin-top: 10px;
+        }
+        li {
+            font-weight: bold;
+            margin-top: 2px;
+        }
+        p {
+            margin-top: 0%;
+            margin-left: 30px;
+            margin-bottom: 5px;
+        }
+        .cim {
+            margin: 0%;
+            text-align: center;
+            font-size: 50px;
+        }
+        .fooldalra img {
+            position: absolute;
+            width: 75px;
+            height:auto;
+            top: 40px;
+            right: 40px;
+        }
+        .jatekkep {
+            width: 750px;
+            height: auto;
+        }
+    </style>
+    
 </head>
 <body>
-    
+    <h1 class="cim">Játékmenet <a href="index.html" class="fooldalra"><img src="kepek\voidcsirke.png" title="Vissza a főoldalra"></a></h1>
+    <p class="szoveg">
+       A Stardew Valley egy nyílt végű gazdálkodós játék, amelyben a játékos örököl egy elhagyatott farmot, és célja, hogy azt újra virágzó gazdasággá alakítsa. 
+        A játékmenet középpontjában a mezőgazdaság, az állattartás, a közösségi élet, a bányászat és a felfedezés áll. A farmon különféle növényeket lehet termeszteni, 
+        amelyek az évszaktól függően változnak. A rendszeres öntözés és gondozás mellett ezek a termények eladhatók vagy feldolgozhatók különféle gépekkel, 
+        így nagyobb profitot termelve. Emellett az állattenyésztés is fontos része a játéknak: csirkék, tehenek, kecskék és más háziállatok tartásával tojás, 
+        tej és egyéb termékek szerezhetők, amelyeket szintén el lehet adni vagy átalakítani sajtá, majonézzé és más feldolgozott árucikké.
+<br><br>
+        A játékmenet egyik különleges eleme a bánya, ahol ércet, köveket és ritka ásványokat lehet gyűjteni, miközben szörnyekkel kell megküzdeni. 
+        A bányászat fontos a fejlesztésekhez szükséges alapanyagok megszerzése szempontjából. A halászat egy másik tevékenység, amely lehetővé teszi, 
+        hogy különböző vizekből – tavakból, folyókból és az óceánból – halakat fogjunk, amelyek évszaktól, napszaktól és időjárástól függően változnak.
+<br><br>
+        A játék nagy hangsúlyt fektet a társas kapcsolatokra is: a falu lakóival való beszélgetés, ajándékozás és eseményeken való részvétel révén barátságokat lehet kialakítani, 
+        sőt, akár házasságot is kötni. A barátságok új lehetőségeket, történeteket és bónuszokat nyitnak meg. A farm fejlesztéséhez különféle épületek építhetők, 
+        például istálló, üvegház, siló vagy halastó, amelyek további lehetőségeket biztosítanak a gazdálkodásban.
+<br><br>
+        A játék évszakokra és napokra van osztva, és minden döntés – hogyan töltjük el a napunkat, mit fejlesztünk először, kivel barátkozunk – 
+        hatással van a hosszú távú fejlődésre. A Stardew Valley erőssége a szabadságérzetben rejlik: a játékos maga döntheti el, hogy mivel foglalkozik, 
+        mikor és hogyan, így minden játékélmény egyedi és személyre szabott.
+    </p>
+    <ul>
+        <li>Növénytermesztés</li>
+        <p>Minden évszakban más növények ültethetők, amik különböző idő alatt nőnek meg és eltérő profitot hoznak.<br>
+            Ha ezeket feldolgozzuk kézműves árukat kapunk ami akár hatszor annyit érhet mint maga a termés.</p>
+        <li>Állattenyésztés</li>
+        <p>Lehet tartani külöböző állatokat amiktől külöböző állati termékeket nyerhetünk ki.<br>
+            Ezeket aztán eladhatjuk, elajándékozhatjuk vagy akár feldolgozhatjuk hogy több profitot termeljünk vele.</p>
+        <li>Halászat</li>
+        <p>Tavakban, óceánban és folyókban lehet horgászni, évszaktól és időtől függően más-más halakat foghatunk.</p>
+        <li>Bányászat</li>
+        <p>A bányában érceket és értékes ásványokat lehet gyűjteni, de vigyáznunk kell a veszélyes szörnyekkel is.</p>
+        <li>Kapcsolatok</li>
+        <p>A falusiakkal beszélhetsz, ajándékozhatsz és akár házasságot is köthetsz velük.</p>
+        <li>Fejlesztés</li>
+        <p>A farm bővíthető, épületek vásárolhatóak és a játék későbbi szakaszában még akár az automatizálás is megoldható.</p>
+    </ul>
+    <img src="kepek\jatekmenet.png" class="jatekkep">
 </body>
 </html>
