--- a/jatekmenet.html
+++ b/jatekmenet.html
@@ -39,9 +39,20 @@
             right: 40px;
         }
         .jatekkep {
-            width: 750px;
+            width: 500px;
             height: auto;
         }
+        .listakep {
+            display: flex;
+            align-items: center;
+            gap: 30px;
+            margin: 30px 0;
+        }
+        .listakep ul {
+            flex: 1;
+            padding: 0;
+        }
+
     </style>
     
 </head>
@@ -66,6 +77,7 @@
         hatással van a hosszú távú fejlődésre. A Stardew Valley erőssége a szabadságérzetben rejlik: a játékos maga döntheti el, hogy mivel foglalkozik, 
         mikor és hogyan, így minden játékélmény egyedi és személyre szabott.
     </p>
+    <div class="listakep">
     <ul>
         <li>Növénytermesztés</li>
         <p>Minden évszakban más növények ültethetők, amik különböző idő alatt nőnek meg és eltérő profitot hoznak.<br>
@@ -82,6 +94,7 @@
         <li>Fejlesztés</li>
         <p>A farm bővíthető, épületek vásárolhatóak és a játék későbbi szakaszában még akár az automatizálás is megoldható.</p>
     </ul>
-    <img src="kepek\jatekmenet.png" class="jatekkep">
+    <a href="https://stardewvalleywiki.com/Getting_Started" target="_blank
+    "><img src="kepek\jatekmenet.png" class="jatekkep"></a></div>
 </body>
 </html>
