--- a/jatekmenet.html
+++ b/jatekmenet.html
@@ -52,14 +52,16 @@
             flex: 1;
             padding: 0;
         }
-
+        a {
+            color: #a76bcf;
+        }
     </style>
     
 </head>
 <body>
     <h1 class="cim">Játékmenet <a href="index.html" class="fooldalra"><img src="kepek\voidcsirke.png" title="Vissza a főoldalra"></a></h1>
     <p class="szoveg">
-       A Stardew Valley egy nyílt végű gazdálkodós játék, amelyben a játékos örököl egy elhagyatott farmot, és célja, hogy azt újra virágzó gazdasággá alakítsa. 
+        A Stardew Valley egy nyílt végű gazdálkodós játék, amelyben a játékos örököl egy elhagyatott farmot, és célja, hogy azt újra virágzó gazdasággá alakítsa. 
         A játékmenet középpontjában a mezőgazdaság, az állattartás, a közösségi élet, a bányászat és a felfedezés áll. A farmon különféle növényeket lehet termeszteni, 
         amelyek az évszaktól függően változnak. A rendszeres öntözés és gondozás mellett ezek a termények eladhatók vagy feldolgozhatók különféle gépekkel, 
         így nagyobb profitot termelve. Emellett az állattenyésztés is fontos része a játéknak: csirkék, tehenek, kecskék és más háziállatok tartásával tojás, 
@@ -79,22 +81,21 @@
     </p>
     <div class="listakep">
     <ul>
-        <li>Növénytermesztés</li>
+        <li><a href="https://stardewvalleywiki.com/Crops" target="_blank">Növénytermesztés</a></li>
         <p>Minden évszakban más növények ültethetők, amik különböző idő alatt nőnek meg és eltérő profitot hoznak.<br>
             Ha ezeket feldolgozzuk kézműves árukat kapunk ami akár hatszor annyit érhet mint maga a termés.</p>
-        <li>Állattenyésztés</li>
+        <li><a href="https://stardewvalleywiki.com/Animals" target="_blank">Állattenyésztés</a></li>
         <p>Lehet tartani külöböző állatokat amiktől külöböző állati termékeket nyerhetünk ki.<br>
             Ezeket aztán eladhatjuk, elajándékozhatjuk vagy akár feldolgozhatjuk hogy több profitot termeljünk vele.</p>
-        <li>Halászat</li>
+        <li><a href="https://stardewvalleywiki.com/Fish" target="_blank">Halászat</a></li>
         <p>Tavakban, óceánban és folyókban lehet horgászni, évszaktól és időtől függően más-más halakat foghatunk.</p>
-        <li>Bányászat</li>
+        <li><a href="https://stardewvalleywiki.com/Minerals" target="_blank">Bányászat</a></li>
         <p>A bányában érceket és értékes ásványokat lehet gyűjteni, de vigyáznunk kell a veszélyes szörnyekkel is.</p>
-        <li>Kapcsolatok</li>
+        <li><a href="https://stardewvalleywiki.com/Friendship" target="_blank">Kapcsolatok</a></li>
         <p>A falusiakkal beszélhetsz, ajándékozhatsz és akár házasságot is köthetsz velük.</p>
-        <li>Fejlesztés</li>
+        <li><a href="https://stardewvalleywiki.com/Carpenter%27s_Shop" target="_blank">Fejlesztés</a></li>
         <p>A farm bővíthető, épületek vásárolhatóak és a játék későbbi szakaszában még akár az automatizálás is megoldható.</p>
     </ul>
-    <a href="https://stardewvalleywiki.com/Getting_Started" target="_blank
-    "><img src="kepek\jatekmenet.png" class="jatekkep"></a></div>
+    <a href="https://stardewvalleywiki.com/Getting_Started" target="_blank"><img src="kepek\jatekmenet.png" class="jatekkep" title="Játékmenet"></a></div>
 </body>
 </html>
