--- a/termenyek.html
+++ b/termenyek.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Termények</h1>
+    <p>A Stardew Valley-ban a termények termesztése a gazdálkodás alapja. Minden évszakban más-más növények ültethetők, 
+        amelyek eltérő növekedési idővel, hozammal és értékkel rendelkeznek. A megfelelő termények kiválasztása és gondozása kulcsfontosságú a farm sikeréhez.</p>
 </body>
 </html>
