--- a/jatekmenet.html
+++ b/jatekmenet.html
@@ -67,7 +67,7 @@
         így nagyobb profitot termelve. Emellett az állattenyésztés is fontos része a játéknak: csirkék, tehenek, kecskék és más háziállatok tartásával tojás, 
         tej és egyéb termékek szerezhetők, amelyeket szintén el lehet adni vagy átalakítani sajtá, majonézzé és más feldolgozott árucikké.
 <br><br>
-        A játékmenet egyik különleges eleme a bánya, ahol ércet, köveket és ritka ásványokat lehet gyűjteni, miközben szörnyekkel kell megküzdeni. 
+        A <a class="jatekmenet" href="https://stardewvalleywiki.com/Getting_Started" target="_blank">játékmenet</a> egyik különleges eleme a bánya, ahol ércet, köveket és ritka ásványokat lehet gyűjteni, miközben szörnyekkel kell megküzdeni. 
         A bányászat fontos a fejlesztésekhez szükséges alapanyagok megszerzése szempontjából. A halászat egy másik tevékenység, amely lehetővé teszi, 
         hogy különböző vizekből – tavakból, folyókból és az óceánból – halakat fogjunk, amelyek évszaktól, napszaktól és időjárástól függően változnak.
 <br><br>
@@ -96,6 +96,6 @@
         <li><a href="https://stardewvalleywiki.com/Carpenter%27s_Shop" target="_blank">Fejlesztés</a></li>
         <p>A farm bővíthető, épületek vásárolhatóak és a játék későbbi szakaszában még akár az automatizálás is megoldható.</p>
     </ul>
-    <a href="https://stardewvalleywiki.com/Getting_Started" target="_blank"><img src="kepek\jatekmenet.png" class="jatekkep" title="Játékmenet"></a></div>
+    <img src="kepek\jatekmenet.png" class="jatekkep" title="Játékmenet"></div>
 </body>
 </html>
