--- a/termenyek.html
+++ b/termenyek.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            font-size: 30px;
+        }
+        h1 {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Termények</h1>
+    <h1>Termények <img src="kepek\Brown_Chicken.png"></h1>
     <p>A Stardew Valley-ban a termények termesztése a gazdálkodás alapja. Minden évszakban más-más növények ültethetők, 
-        amelyek eltérő növekedési idővel, hozammal és értékkel rendelkeznek. A megfelelő termények kiválasztása és gondozása kulcsfontosságú a farm sikeréhez.</p>
+        amelyek eltérő növekedési idővel, hozammal és értékkel rendelkeznek. A megfelelő termények kiválasztása és gondozása kulcsfontosságú a farm sikeréhez.
+    </p>
+    <table>
+
+    </table>
 </body>
 </html>
