--- a/esemenyek.html
+++ b/esemenyek.html
@@ -3,9 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Események</title>
+    <style>
+        body {
+            background-image: url(csillagos.jpg);
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 100% 100%;
+            font-size: 30px;
+            color: white;
+        }
+        .fooldalra img {
+            position: absolute;
+            width: 100px;
+            height:auto;
+            top: 10px;
+            right: 10px;
+        }
+        h1 {
+            text-align: center;
+        }
+        .kep {
+            position: absolute;
+            top: 700px;
+            right: 10px;
+        }
+        a {
+            color: rgb(212, 19, 171);
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Események     <a href="index.html" class="fooldalra"><img src="Golden_Chicken.png" title="Vissza a főoldalra"></a></h1>
+    <img src="calendaar.jpg" class="kep"><h2>Tavaszi események</h2>
+    <ul>
+        <li>Tojásfesztivál</li>
+        <ul>
+            <li>Tojásvadászat a falusiakkal</li>
+            <li>Pierre különleges tárgyakat árul</li>
+        </ul>
+        <li>Virágtánc</li>
+        <ul>
+            <li>Táncpartner kiválasztása</li>
+        </ul>
+    </ul>   <h2>Nyári események</h2>
+    <ul>
+        <li>Luau</li>
+        <ul>
+            <li>Főzőedénybe lehet hozzájárulni (a hozzávaló minősége számít)</li>
+        </ul>
+        <li>Világító medúzák tánca</li>
+        <ul>
+            <li>Medúzanézés az óceánparton</li>
+        </ul>
+    </ul>   
+    <h2>Őszi események</h2>
+    <ul>
+        <li>Vásár a főtéren</li>
+        <ul>
+            <li>Játékos stand (kiállítható tárgyak)</li>
+            <li>Mini-játékok, Csillagjegy-tokenek</li>
+        </ul>
+        <li>Lelkek Éjszakája</li>
+        <ul>
+            <li>Halloween-hangulat, labirintus (jutalom: arany tök, recept)</li> 
+        </ul>
+    </ul>   
+    <h2>Téli események</h2>
+    <ul>
+        <li>Jégfesztivál</li>
+        <ul>
+            <li>Horgászverseny</li>
+        </ul>
+        <li>A Téli Csillag Ünnepe</li>
+        <ul>
+            <li>Titkos ajándékozás egy falusi karakterrel</li>
+            <li>Speciális beszélgetések, ajándékok</li>
+        </ul>
+        <h2>Egyéb <a href="https://stardewvalleywiki.com/Festivals" target="_blank">események</a></h2>
+    <ul>
+        <li>Születésnapok</li>
+        <ul>
+            <li>Ajándékozáskor extra bónusz (sokkal több barátságpont)</li>
+        </ul>
+        <li>Random események</li>
+        <ul>
+            <li>Meteor, boszorkány, tündér stb. éjszaka történhetnek</li>
+        </ul>
+        <li>Évfordulók, házasságkötés, gyermek születése</li>
+        <ul>
+            <li>Játékos fejlődésétől függően aktiválódnak</li>
+        </ul>
+    </ul>
+   
 </body>
 </html>
