--- a/index.html
+++ b/index.html
@@ -26,9 +26,19 @@
         bottom: 20px;
         left: 20px;
     }
+    .cimsor {
+        position: absolute;
+        width: 100%;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.521);
+    font-size: 3em;
+    text-shadow: 2px 2px 4px black;
+    z-index: 1;
+}
 </style>
 </head>
 <body>
+    <h1 class="cimsor">Németh Csenge</h1>
     <img class="hatterkep" src="kepek\loading_screen_done.jpg" usemap="#elsooldal">
     <a href="https://www.stardewvalley.net/" target="_blank" class="link"><img src="kepek\csirke.png"></a>
     <map name="elsooldal">
